# aws-profile-switch

./: .gitignore  ISSUES.md  LICENSE  README-jp.md  README.md  pyproject.toml  pytest.ini  run_tests.py  test_basic.py
src/aws_profile_switch/: __init__.py  cli.py  config_parser.py  core.py  exceptions.py  models.py  search.py  shell.py  ui.py
tests/: __init__.py  test_cli.py  test_config_parser.py  test_core.py  test_integration.py  test_models.py  test_search.py  test_shell.py
