[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-profile-switch"
version = "0.1.0"
description = "A Python-based command-line tool to simplify AWS CLI profile switching for AWS administrators"
authors = [
    {name = "AWS Profile Switch Team", email = "maintainer@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["aws", "cli", "profile", "sso", "iam", "identity-center"]
dependencies = [
    "prompt-toolkit>=3.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/takedai0313/aws-profile-switch"
Documentation = "https://github.com/takedai0313/aws-profile-switch#readme"
Repository = "https://github.com/takedai0313/aws-profile-switch"
Issues = "https://github.com/takedai0313/aws-profile-switch/issues"

[project.scripts]
aws-profile-switch = "aws_profile_switch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=aws_profile_switch --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "fuzzywuzzy.*",
    "Levenshtein.*",
]
ignore_missing_imports = true